syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message HubEventProto {
  string hub_id = 1;
  google.protobuf.Timestamp timestamp = 2;
  oneof payload {
    DeviceAddedEventProto device_added = 3;
    DeviceRemovedEventProto device_removed = 4;
    ScenarioAddedEventProto scenario_added = 5;
    ScenarioRemovedEventProto scenario_removed = 6;
  }
}

enum DeviceTypeProto {
  // Варианты значений enum DeviceTypeProto
  MOTION_SENSOR = 0;      // датчик движения
  TEMPERATURE_SENSOR = 1; // датчик температуры
  LIGHT_SENSOR = 2;       // датчик освещённости
  CLIMATE_SENSOR = 3;     // датчик контроля климата
  SWITCH_SENSOR = 4;      // переключатель
}

message DeviceAddedEventProto {
  string id = 1;
  DeviceTypeProto type = 2;
}

message DeviceRemovedEventProto {
  string id = 1;
}

message ScenarioAddedEventProto {
  string id = 1;
}

message ScenarioRemovedEventProto {
  string id = 1;
}