syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service CollectorController {
  rpc CollectSensorEvent (SensorEventProto)
      returns (google.protobuf.Empty);

  rpc CollectHubEvent (HubEventProto)
      returns (google.protobuf.Empty);
}